stopped jumping on hover update projects

--- a/style.css
+++ b/style.css
@@ -181,18 +181,6 @@ a {
   margin: 0 auto;
 }
 
-/* Media Query for Desktop (screens wider than, for example, 768px) */
-@media (min-width: 768px) {
-  .fixed-lt {
-    position: sticky;
-    top: 0;
-    height: fit-content;
-    -webkit-position: sticky;
-  }
-  .prj-section {
-    height: 18rem;
-  }
-}
 p li {
   font-size: var(--space-md);
   line-height: var(--space-mid);
@@ -224,7 +212,8 @@ section#home {
 }
 .card:hover {
   background: var(--color-hover);
-  border: 1px solid var(--color-hover);
+  outline: 2px solid var(--color-hover);
+
   .card-job-title {
     color: var(--color-accent-primary);
     font-weight: 500;
@@ -266,39 +255,6 @@ li {
   display: inline-flex;
   font-size: 12px;
   text-transform: capitalize;
-}
-
-/* Media Query for MOBILE */
-@media (max-width: 598px) {
-  header {
-    margin-bottom: 0;
-    position: relative;
-  }
-  .card-details {
-    margin-left: 0;
-    width: 100vw;
-  }
-
-  p {
-    margin: var(--space-sm);
-  }
-  .card {
-    padding: 0;
-    gap: 0;
-    max-width: 100%;
-  }
-  li {
-    width: 70vw;
-  }
-  .card-job-title {
-    width: 70vw;
-  }
-  div.pill {
-    width: 80%;
-  }
-  .prj-section {
-    height: 100vh;
-  }
 }
 
 /* PROJECTS */
@@ -435,6 +391,8 @@ dialog::backdrop {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  max-width: 100%;
+  height: auto;
 }
 
 dialog {
@@ -494,3 +452,55 @@ a.prj-link {
 13. nav is indented not enough
 14. nav mobile version
 */
+/* Media Query for Desktop (screens wider than, for example, 768px) */
+@media (min-width: 768px) {
+  .fixed-lt {
+    position: sticky;
+    top: 0;
+    height: fit-content;
+    -webkit-position: sticky;
+  }
+  .prj-section {
+    height: 18rem;
+  }
+}
+
+/* Media Query for MOBILE */
+@media (max-width: 598px) {
+  header {
+    margin-bottom: 0;
+    position: relative;
+  }
+  .card-details {
+    margin-left: 0;
+    width: 100vw;
+  }
+
+  p {
+    margin: var(--space-sm);
+  }
+  .card {
+    padding: 0;
+    gap: 0;
+    max-width: 100%;
+  }
+  li {
+    width: 70vw;
+  }
+  .card-job-title {
+    width: 70vw;
+  }
+  div.pill {
+    width: 80%;
+  }
+  .prj-section {
+    height: 100vh;
+  }
+  .link-close {
+    margin: 0 0 1rem;
+    width: auto;
+  }
+  a.prj-link {
+    width: auto;
+  }
+}
